<resources>
    <string name="app_name">VPFinalProject</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login2">LoginActivity2</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fullName">Full Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="greeting">{greeting}</string>
    <string name="name">{name}</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="goToLogin">Already have an account ? Login</string>
    <string name="goToRegis">Don\'t have an account ? Register</string>

    <string name="morning">Good Morning,</string>
    <string name="afternoon">Good Afternoon,</string>
    <string name="evening">Good Evening,</string>
    <string name="night">Good Night,</string>
    <string name="hello">Hello</string>
    <string name="welcome">Welcome</string>
</resources>