<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar_login"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="@+id/TIL_login_password"
                app:layout_constraintStart_toStartOf="@+id/TIL_login_password"
                app:layout_constraintTop_toBottomOf="@+id/TIL_login_password" />

            <Button
                android:id="@+id/button_login_login"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#DB00FF"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxHeight="48dp"
                android:minHeight="48dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/TIL_login_password"
                app:layout_constraintStart_toStartOf="@+id/TIL_login_password"
                app:layout_constraintTop_toBottomOf="@+id/TIL_login_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_login_password"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxHeight="60dp"
                android:minHeight="60dp"
                app:endIconCheckable="false"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/TIL_login_username"
                app:layout_constraintStart_toStartOf="@+id/TIL_login_username"
                app:layout_constraintTop_toBottomOf="@+id/TIL_login_username"
                app:startIconDrawable="@drawable/ic_outline_password_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInput_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_login_username"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxHeight="60dp"
                android:minHeight="60dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:passwordToggleEnabled="false"
                app:startIconDrawable="@drawable/ic_outline_username_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInput_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="256dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_512_zenzen" />

            <TextView
                android:id="@+id/button_login_goToRegister"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="72dp"
                android:layout_marginBottom="48dp"
                android:clickable="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:maxHeight="48dp"
                android:minHeight="48dp"
                android:text="@string/goToRegis"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button_login_login"
                app:layout_constraintStart_toStartOf="@+id/button_login_login"
                app:layout_constraintTop_toBottomOf="@+id/TIL_login_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>